Update worker + handle result's message
